--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   validators: ^3.0.0
   page_transition: ^2.2.1
   easy_localization: ^3.0.7
+  firebase_core: ^3.10.1
 
 dev_dependencies:
   flutter_test:
